src/styles/globals.css
/* ... */
article.product-card:last-child {
  margin-bottom: 0em;
}
article.product .product-wrap {
  grid-column: 1/-1;
}

article.product-card .product-wrap img {
  width: 100%;
}

.product-wrap div {
  width: 100% !important;
  height: 500px !important;
}

article.product > * {
  outline: solid 0.0625rem currentColor;
  outline-offset: 0;
}

.product-wrap {
  position: relative;
}

article.product > section > header {
  font-size: 1rem;
  line-height: 1.5;
  --line-height: 1.5rem;
}

article.product > section > header,
article.product > section > section {
  padding: 1.5rem;
  display: grid;
  grid-gap: 1rem;
  gap: 1rem;
}

@media (min-width: 1024px) {
  .product-section {
    /* max-width: 1024px; */
    margin: 0 auto;
    padding: 4rem;
    /* added the transform to center to section */
    transform: translate(0%, 10%);
  }
}

article.product-card,
article.product {
  background-color: #fff;
  background-color: var(--background);
  color: #000;
  color: var(--primary);
  border: solid 0.0625rem currentColor;
  border-radius: 0.25rem;
}

article.product > section > header:not(:first-child),
article.product > section > section:not(:first-child) {
  border-top: solid 0.0625rem currentColor;
}

article.product > * {
  outline: solid 0.0625rem currentColor;
  outline-offset: 0;
}

@media (min-width: 1240px) {
  article.product > section > section.details {
    grid-template-columns: auto auto 1fr;
  }
}

.primary {
  background-color: #000;
  color: #fff;
  border-color: #000;
}
.primary.button:hover {
  background-color: #000;
  color: #e5e7eb;
  border-color: #000;
  transition: all 1s cubic-bezier(0.7, 0, 0.3, 1);
}

.button {
  background: transparent;
  font-size: 1rem;
  line-height: 1.5;
  --line-height: 1.5rem;
  padding: 0.75rem 1rem;
  border: solid 0.0625rem currentColor;
  color: currentColor;
  border-radius: 0.25rem;
  font-family: inherit;
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(0, -webkit-max-content);
  grid-auto-columns: minmax(0, max-content);
  display: inline-grid;
  align-items: center;
  justify-content: center;
  grid-gap: 0.5rem;
  gap: 0.5rem;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  transition: all 0.14s ease-out;
}

article.product-card {
  position: relative;
  transition: all 0.14s ease-out;
  display: grid;
  grid-template-rows: auto 1fr auto;
  overflow: hidden;
}

.product-card:hover img {
  transform: scale(1.02);
  transform-origin: 0 50%;
  transition: transform 1.16s cubic-bezier(0.4, 0.01, 0.14, 0.99);
}
article.product-card,
article.product {
  background-color: #fff;
  background-color: var(--background);
  color: #000;
  color: var(--primary);
  border: solid 0.0625rem currentColor;
  border-radius: 0.25rem;
}

a.stretched-link {
  -webkit-text-decoration: none;
  text-decoration: none;
}

article.product-card header {
  padding: 1rem;
  display: grid;
  grid-template-rows: 1fr;
  grid-gap: 0.5rem;
  gap: 0.5rem;
  border-bottom: solid 0.0625rem currentColor;
}

article.product-card footer {
  display: flex;
}

article.product-card footer > *.more {
  flex-grow: 1;
}

article.product-card footer > *:not(:last-child) {
  border-right: solid 0.0625rem currentColor;
}

article.product-card footer > * {
  padding: 0.5rem 1rem;
}

.more {
  display: grid;
  font-size: 1rem;
  grid-auto-flow: column;
  grid-auto-columns: minmax(0, max-content);
  align-items: center;
  flex-shrink: 0;
  grid-gap: 0.25rem;
  gap: 0.25rem;
  grid-template-columns: none;
}

.product-card-grid {
  padding: 0 20px;
  --min-grid-absolute-size: 16rem;
  --max-grid-relative-size: 33%;
}

/* .grid,
.product-card-grid {
  display: grid;
  grid-template-columns: repeat(
    auto-fill,
    minmax(
      max(
        min(var(--min-grid-absolute-size), 100%),
        var(--max-grid-relative-size) - 1rem
      ),
      1fr
    )
  );
  grid-gap: 1rem;
  gap: 1rem;
} */

.pill {
  display: inline-block;
  vertical-align: middle;
  text-transform: uppercase;
  font-weight: 600;
  padding: 0.5rem 0.75rem;
  background-color: #fff;
  background-color: var(--background);
  color: #000;
  color: var(--primary);
  border: solid 0.0625rem currentColor;
  border-radius: 10rem;
  font-family: inherit;
  max-width: 100%;
  min-width: 0;
  font-size: 0.8rem;
  line-height: 1.3;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.pill.feature {
  background-color: #f4f4f0;
  color: #ccc;
}

h3:has(.pill.feature) {
  display: flex;
  align-items: center;
  gap: 0.5em;
}
.stack {
  padding: 0;
  display: grid;
  background-color: rgba(0, 0, 0, 0.03);
  color: #000;
  border: solid 0.0625rem currentColor;
  border-radius: 0.25rem;
}

.logo-container {
  padding-bottom: 48px;
  display: block;
}

@media screen and (max-width: 991px) {
  .section {
    padding-top: 3rem;
    padding-bottom: 4rem;
  }
}

.section {
  position: relative;
  padding-top: 4rem;
  padding-bottom: 5rem;
  border-bottom: 2px solid #000;
}

@media screen and (max-width: 991px) {
  .container {
    padding-right: 4rem;
    padding-left: 4rem;
  }
}

.container {
  width: 100%;
  padding-right: 4vw;
  padding-left: 4vw;
}

.section-intro {
  display: grid;
  width: 65vw;
  max-width: 45rem;
  margin-right: auto;
  margin-left: auto;
  flex-direction: column;
  justify-content: center;
  grid-auto-columns: 1fr;
  grid-column-gap: 0rem;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto;
  text-align: center;
}

.section.small {
  padding-top: 3rem;
  padding-bottom: 4rem;
}

@media screen and (max-width: 991px) {
  .section.small {
    padding-top: 2.5rem;
    padding-bottom: 3rem;
  }
}

.plan {
  box-shadow: 6px 6px 0 0 #000;
  transform: translate(-6px, -6px);
  border: 2px solid #000;
  border-radius: 0.375rem;
  overflow: hidden;
}

.plan-wrap {
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 0.375rem;
  flex-direction: column;
  color: #000;
  background: #fff;
}
/* ... */

